--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       JWT_SECRET: changeme
       JWT_ALGORITHM: HS256
       JWT_EXPIRES_MINUTES: 60
+      ENVIRONMENT: docker
+      CORS_ORIGINS: http://localhost:5173
     depends_on:
       - postgres
     ports:
